added creative commons

--- a/README
+++ b/README
@@ -2,3 +2,12 @@ Memorize - HTML5 mobile app
 ===========================
 
 This project is a sample HTML5 mobile app. The Copyright belongs to @uxebu and @itagile. 
+
+Images are Creative Commons-licensed by:
+http://www.flickr.com/photos/tommikomulainen/
+http://www.flickr.com/photos/brokersaunders/
+http://www.flickr.com/photos/raster/
+http://www.flickr.com/photos/jonburnell/
+http://www.flickr.com/photos/23240330@N03/
+http://www.flickr.com/photos/ikaros_images/
+http://www.flickr.com/photos/tusnelda/
